Sat Feb 26 20:54:22 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * include/LEESA/AP.cpp:
        * include/LEESA/Carrier_Optimized.h:
        * include/LEESA/Carrier_Optimized.cpp:
        * include/LEESA/Carrier_Simple.h:
        * include/LEESA/Concepts.h:
        * include/LEESA/Expression_Traits.h:
        * include/LEESA/Kind_Traits.h:
        * include/LEESA/LEESA.cpp:
        * include/LEESA/Operators.cpp:
        * include/LEESA/SP.cpp:
        * include/LEESA/Sequence.hpp:
        * include/LEESA/SingleStage.h:

          Added descriptive conditional compilation guards for rvalue-ref,
          lambda, decltype, and variadic templates

        * tests/library-xsd/Makefile:
        * tests/library-xsd/driver.cxx:
        * tests/library-xsd/testN.sh:

          Improved test code and a script for automating testing.

Tue Feb 22 08:15:10 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * tests/library-xsd/driver.cxx:
          Fixed compilation problems on Visual Studio 2010
          
Tue Feb 22 08:08:53 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * INSTALL.txt:

        * include/LEESA/Expression_Traits.h:
          Added function_traits to handle C++0x lambdas.
          Lambdas don't have argument_type and result_type defined. LEESA
          needs them. function_traits deduce them from lambdas.

        * include/LEESA/Operators.cpp:
        * include/LEESA/SP.cpp:
          Use new function_traits.

        * tests/PICML-xsd/README:

        * tests/library-xsd/Makefile:
        * tests/library-xsd/README:
        * tests/library-xsd/driver.cxx:
          New test program using C++0x lambda.

Tue Feb 22 07:09:29 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * include/LEESA/Carrier_Optimized.h:

        * tests/PICML-xsd/picml-10.0.sln:
        * tests/PICML-xsd/picml-10.0.vcxproj:

        * tests/library-xsd/README:
        * tests/library-xsd/driver.cxx:
        * tests/library-xsd/gettimeofday_win.cxx: